--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!--git init
 git add index.html
 git commit -m "Aggiunto file index.html con il mio nome"
-git remote add origin <> che sarebbe url del mio repository 
+git remote add origin <https://github.com/ChiaraC07/Chiara> che sarebbe url del mio repository 
 git push -u origin master
 Quello che viene eseguito nel prompt dei comandi e posizionato nella cartella del progetto (dove si trova il file index.html).
 -->
